--- a/MenuFragment/app/src/main/res/layout/ekonomi_fragment.xml
+++ b/MenuFragment/app/src/main/res/layout/ekonomi_fragment.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
     tools:context="com.example.magnus.menufragment.MainActivity">
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -163,16 +161,11 @@
             </GridLayout>
 
         </LinearLayout>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/test_textView"
-            android:text="hejsan"/>
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_alignParentBottom="false"
+        android:layout_alignParentBottom="true"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -183,9 +176,8 @@
             android:layout_weight="1"
             android:gravity="center"
             android:id="@+id/nyinkomst"
-            android:text="Ny inkomst"
             android:layout_alignParentBottom="true"
-
+            android:text="Ny inkomst"
             />
         <Button
             android:layout_width="match_parent"
@@ -194,6 +186,7 @@
             android:gravity="center"
             android:id="@+id/nyutgift"
             android:text="Ny utgift"/>
+
     </LinearLayout>
+
 </RelativeLayout>
-</ScrollView>
