--- a/MenuFragment/app/src/main/res/layout/annons_item.xml
+++ b/MenuFragment/app/src/main/res/layout/annons_item.xml
@@ -14,6 +14,9 @@
         android:layout_marginTop="@dimen/activity_horizontal_margin"/>
 
     <TextView
+        android:onClick="onClick"
+        android:clickable="true"
+
         android:paddingTop="10dp"
         android:id="@+id/annons_item_title"
         android:textSize="13dp"
