--- a/MenuFragment/app/src/main/res/layout/schema_fragment.xml
+++ b/MenuFragment/app/src/main/res/layout/schema_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,33 +7,16 @@
     android:padding="16dp"
     tools:context="com.example.magnus.menufragment.MainActivity">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
+            <CalendarView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Schema"/>
-
-            <CalendarView
-                android:layout_width="match_parent"
-                android:layout_height="324dp"
                 android:id="@+id/calendarView" />
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/dateDisplay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -83,6 +66,5 @@
                 android:layout_height="wrap_content"
                 android:text="15:00 -   Chuck Berry  Nya stämskruvar"/>
 
-        </LinearLayout>
-    </LinearLayout>
-</ScrollView>
+
+</LinearLayout>
