Lagt in jonathans fullkod
Fixat så att vi har en adapter och visar det som finns i databasen på
ett tjusigt sätt i en listview

--- a/MenuFragment/app/src/main/res/layout/schema_fragment.xml
+++ b/MenuFragment/app/src/main/res/layout/schema_fragment.xml
@@ -7,64 +7,21 @@
     android:padding="16dp"
     tools:context="com.example.magnus.menufragment.MainActivity">
 
-            <CalendarView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/calendarView" />
+    <CalendarView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/calendarView" />
 
-            <TextView
-                android:id="@+id/dateDisplay"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/dateDisplay" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tisdag:"
-                android:textSize="20sp"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="10:00 -   Martin  Trasig hals"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="11:00 -   Slash  Stämma gitaren"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="Onsdag"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="11:30 -   Jimi Hendrix  Lösa skruvar"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="14:00 -   Jimmy Page  byta strängar"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="15:00 -   Dave Murray  Hål i baksidan"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="Torsdag"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="11:30 -   Bob Dylan  Stämmning"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="14:00 -   Mark Knopfler  byta hals och laga hål"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="15:00 -   Chuck Berry  Nya stämskruvar"/>
-
+    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/schemaListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:layout_gravity="top" />
 
 </LinearLayout>
