Snyggat till koden
^

--- a/MenuFragment/app/src/main/res/layout/annons_fragment.xml
+++ b/MenuFragment/app/src/main/res/layout/annons_fragment.xml
@@ -11,185 +11,9 @@
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/myListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:layout_gravity="top"
-
-
-        />
-
-
-
-
-<!--    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_gravity="top"
         android:layout_weight="1"
-        tools:context="com.example.magnus.menufragment.MainActivity">
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:id="@+id/annons_layout_5">
-
-                <ImageView
-                    android:id="@+id/annons_image_1"
-                    android:paddingLeft="20dp"
-                    android:layout_width="150dp"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/guitar2"
-                    android:layout_marginTop="@dimen/activity_horizontal_margin"/>
-
-                <TextView
-                    android:paddingTop="10dp"
-                    android:id="@+id/annons_titel_1"
-                    android:textSize="13dp"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="left"
-                    android:text="Titel"
-                    android:layout_gravity="top|center"
-                    android:singleLine="false" />
-
-
-
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="wrap_content"
-                    android:gravity="right"
-                    android:layout_height="match_parent">
-
-                    <Button
-                        android:textSize="15dp"
-                        android:layout_width="100dp"
-                        android:layout_height="45dp"
-                        android:gravity="center"
-                        android:id="@+id/redigera"
-                        android:text="redigera"/>
-                    <Button
-                        android:textSize="15dp"
-                        android:layout_width="100dp"
-                        android:layout_height="45dp"
-                        android:gravity="center"
-                        android:id="@+id/ta_bort"
-                        android:text="ta bort"/>
-
-                </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:id="@+id/annons_layout_6">
-
-                <ImageView
-                    android:id="@+id/annons_image_2"
-                    android:paddingLeft="20dp"
-                    android:layout_width="150dp"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/guitar2"
-                    android:layout_marginTop="@dimen/activity_horizontal_margin"/>
-
-                <TextView
-                    android:paddingTop="10dp"
-                    android:id="@+id/annons_titel_2"
-                    android:textSize="13dp"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="left"
-                    android:text="Titel"
-                    android:layout_gravity="top|center"
-                    android:singleLine="false" />
-
-
-
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="wrap_content"
-                    android:gravity="right"
-                    android:layout_height="match_parent">
-
-                    <Button
-                        android:textSize="15dp"
-                        android:layout_width="100dp"
-                        android:layout_height="45dp"
-                        android:gravity="center"
-                        android:id="@+id/redigera"
-                        android:text="redigera"/>
-                    <Button
-                        android:textSize="15dp"
-                        android:layout_width="100dp"
-                        android:layout_height="45dp"
-                        android:gravity="center"
-                        android:id="@+id/ta_bort"
-                        android:text="ta bort"/>
-
-                </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:id="@+id/annons_layout_8">
-
-                <ImageView
-                    android:id="@+id/annons_image_3"
-                    android:paddingLeft="20dp"
-                    android:layout_width="150dp"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/guitar2"
-                    android:layout_marginTop="@dimen/activity_horizontal_margin"/>
-
-                <TextView
-                    android:paddingTop="10dp"
-                    android:id="@+id/annons_titel_3"
-                    android:textSize="13dp"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="left"
-                    android:text="Titel"
-                    android:layout_gravity="top|center"
-                    android:singleLine="false" />
-
-
-
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="wrap_content"
-                    android:gravity="right"
-                    android:layout_height="match_parent">
-
-                    <Button
-                        android:textSize="15dp"
-                        android:layout_width="100dp"
-                        android:layout_height="45dp"
-                        android:gravity="center"
-                        android:id="@+id/redigera"
-                        android:text="redigera"/>
-                    <Button
-                        android:textSize="15dp"
-                        android:layout_width="100dp"
-                        android:layout_height="45dp"
-                        android:gravity="center"
-                        android:id="@+id/ta_bort"
-                        android:text="ta bort"/>
-
-                </LinearLayout>
-            </LinearLayout>
-        </LinearLayout>
-
-
-    </ScrollView>-->
+        android:layout_gravity="top" />
 
     <LinearLayout
         android:orientation="vertical"
