--- a/MenuFragment/app/src/main/res/layout/lager_fragment.xml
+++ b/MenuFragment/app/src/main/res/layout/lager_fragment.xml
@@ -1,136 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context="com.example.magnus.menufragment.MainActivity">
+    >
 
-     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Lägg till"
-        android:id="@+id/lager_add"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_toStartOf="@+id/button5"
-        android:layout_alignParentEnd="true" />
+   <ListView
+       android:id="@+id/lagerListView"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minHeight="0dp"
-        android:minWidth="0dp"
-        android:text="-"
-        android:id="@+id/button"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/button5" />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minHeight="0dp"
-        android:minWidth="0dp"
-        android:text="+"
-        android:id="@+id/button"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText"
-        android:text="5"
-        android:layout_alignTop="@+id/button"
-        android:layout_toStartOf="@+id/button" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Item 1"
-        android:id="@+id/textView"
-        android:textSize="30sp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Item 2"
-        android:id="@+id/textView2"
-        android:textSize="30sp"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Item 3"
-        android:id="@+id/textView3"
-        android:textSize="30sp"
-        android:layout_alignBottom="@+id/button5"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="..."
-        android:id="@+id/textView4"
-        android:textSize="30sp"
-        android:layout_below="@+id/editText3"
-        android:layout_alignParentEnd="true" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minHeight="0dp"
-        android:minWidth="0dp"
-        android:text="+"
-        android:id="@+id/button2"
-        android:layout_below="@+id/button"
-        android:layout_alignParentEnd="true" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minHeight="0dp"
-        android:minWidth="0dp"
-        android:text="+"
-        android:id="@+id/button3"
-        android:layout_below="@+id/button2"
-        android:layout_alignParentEnd="true" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText2"
-        android:text="7"
-        android:layout_alignBottom="@+id/button2"
-        android:layout_toStartOf="@+id/button2" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText3"
-        android:text="10"
-        android:layout_alignBottom="@+id/button3"
-        android:layout_toStartOf="@+id/button3" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minHeight="0dp"
-        android:minWidth="0dp"
-        android:text="-"
-        android:id="@+id/button5"
-        android:layout_alignBottom="@+id/button3"
-        android:layout_toStartOf="@+id/editText3" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minHeight="0dp"
-        android:minWidth="0dp"
-        android:text="-"
-        android:id="@+id/button6"
-        android:layout_above="@+id/button5"
-        android:layout_alignStart="@+id/button5" />
-
-</RelativeLayout>
+</LinearLayout>
