--- a/MenuFragment/app/src/main/res/menu/filter.xml
+++ b/MenuFragment/app/src/main/res/menu/filter.xml
@@ -6,6 +6,7 @@
         android:id="@+id/action_filter"
         android:title="filter"
         android:orderInCategory="10"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_date_range_white_24dp"/>
 
 </menu>
