--- a/MenuFragment/app/src/main/res/values/styles.xml
+++ b/MenuFragment/app/src/main/res/values/styles.xml
@@ -1,11 +1,26 @@
 <resources>
 
-    <!-- Base application theme. -->
+    <!-- Base application theme.
     <style name="AppTheme" parent="Base.Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+    </style>-->
+
+    <style name="AppTheme" parent="Base.Theme.AppCompat.Light.DarkActionBar">
+
+        <item name="android:actionBarStyle">@style/customActionBar</item>
+    </style>
+
+    <!-- #‎484E55‬ -->
+    <style name="customActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
+        <item name="android:background">#484e55</item>
+        <item name="android:titleTextStyle">@style/customTextColor</item>
+    </style>
+
+    <style name="customTextColor" parent="@android:style/TextAppearance.StatusBar.Title">
+        <item name="android:textColor">@android:color/white</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
