--- a/MenuFragment/app/src/main/res/layout/schema_item.xml
+++ b/MenuFragment/app/src/main/res/layout/schema_item.xml
@@ -44,7 +44,8 @@
             android:layout_width="100dp"
             android:layout_height="45dp"
             android:id="@+id/schema_edit"
-            android:text="redigera"/>
+            android:text="redigera"
+            android:onClick="schemaUpdateTime"/>
         <Button
             android:textSize="15dp"
             android:layout_width="100dp"
