--- a/MenuFragment/app/src/main/res/layout/schema_item.xml
+++ b/MenuFragment/app/src/main/res/layout/schema_item.xml
@@ -25,7 +25,7 @@
             android:text="Customer" />
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/schema_description"
             android:text="description" />
