--- a/MenuFragment/app/src/main/res/layout/schema_update_time_fragment.xml
+++ b/MenuFragment/app/src/main/res/layout/schema_update_time_fragment.xml
@@ -3,9 +3,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark"
-    android:background="#40404f"
-
+    android:background="#cbc7c4"
     android:layout_alignParentTop="true"
     android:id="@+id/linearLayout"
     android:orientation="vertical"
