--- a/MenuFragment/app/src/main/res/layout/lager_item_row.xml
+++ b/MenuFragment/app/src/main/res/layout/lager_item_row.xml
@@ -1,31 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
     android:orientation="horizontal"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:padding="10dp">
+    android:layout_width="match_parent"
+    android:layout_height="100dp"
+    android:id="@+id/product_item_row">
 
-    <ImageView android:id="@+id/product_image"
+    <ImageView
+        android:id="@+id/product_image"
+        android:paddingLeft="20dp"
+        android:layout_width="130dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:background="@drawable/guitar2"/>
+
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="100dp"
+        android:layout_height="match_parent"
+        >
+
+        <TextView
+            android:id="@+id/product_name"
+
+            android:paddingTop="10dp"
+            android:textSize="15dp"
+            android:layout_width="100dp"
+            android:layout_height="65dp"
+            android:gravity="left"
+            android:text="Produktnamn"
+            android:layout_gravity="top|left"
+            android:singleLine="false"
+
+            android:onClick="onClick"
+            android:clickable="true"
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="25dp"
+            >
+
+            <TextView
+                android:id="@+id/product_amount_desc"
+
+                android:text=" Antal: "
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15dp"
+                android:layout_gravity="top|left"
+                />
+            <TextView
+                android:id="@+id/product_amount"
+
+                android:text="0"
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="13dp"
+                android:layout_gravity="top|center"
+                />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:gravity="center_vertical"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp" />
+        android:gravity="right"
+        android:layout_height="match_parent">
 
-    <TextView android:id="@+id/product_title"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:gravity="center_vertical"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:textStyle="bold"
-        android:textSize="22dp"
-        android:textColor="#000000"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp" />
-
+        <Button
+            android:textSize="15dp"
+            android:layout_width="100dp"
+            android:layout_height="45dp"
+            android:gravity="center"
+            android:id="@+id/product_edit_button"
+            android:text="Redigera"/>
+        <Button
+            android:textSize="15dp"
+            android:layout_width="100dp"
+            android:layout_height="45dp"
+            android:gravity="center"
+            android:id="@+id/product_delete_button"
+            android:text="Ta bort"/>
+    </LinearLayout>
 </LinearLayout>
