--- a/MenuFragment/app/src/main/res/layout/schema_item.xml
+++ b/MenuFragment/app/src/main/res/layout/schema_item.xml
@@ -12,20 +12,20 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:id="@+id/schema_time"
             android:textStyle="bold"
             android:text="TID" />
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:id="@+id/schema_customer"
             android:text="Customer" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:id="@+id/schema_description"
             android:text="description" />
