--- a/MenuFragment/app/src/main/res/layout/fragment_ny_inkomst.xml
+++ b/MenuFragment/app/src/main/res/layout/fragment_ny_inkomst.xml
@@ -16,14 +16,15 @@
             android:text="Datum" />
 
         <EditText
-            android:id="@+id/txtNamn"
+            android:id="@+id/txtSetDate"
+            android:hint="YYYY-MM-DD"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.75"
             android:ems="10" />
 
     </LinearLayout>
-
+<!--
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -61,7 +62,7 @@
             android:layout_weight="0.75"
             android:ems="10" />
     </LinearLayout>
-
+-->
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -81,7 +82,7 @@
             android:orientation="horizontal" >
 
             <EditText
-                android:id="@+id/txtIsbn"
+                android:id="@+id/txtSetAmount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="5" />
