--- a/MenuFragment/app/src/main/res/layout/fragment_ny_utgift.xml
+++ b/MenuFragment/app/src/main/res/layout/fragment_ny_utgift.xml
@@ -16,51 +16,53 @@
             android:text="Datum" />
 
         <EditText
-            android:id="@+id/txtNamn"
+            android:id="@+id/txtSetDate"
+            android:hint="YYYY-MM-DD"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.75"
             android:ems="10" />
+
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:layout_width="0dp"
+    <!--
+        <LinearLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.25"
-            android:text="Utgiftskälla" />
+            android:orientation="horizontal" >
 
-        <EditText
-            android:id="@+id/txtInkomst"
-            android:layout_width="0dp"
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.25"
+                android:text="Utfört arbete" />
+
+            <EditText
+                android:id="@+id/txtInkomst"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.75"
+                android:ems="10" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.75"
-            android:ems="10" />
-    </LinearLayout>
+            android:orientation="horizontal" >
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.25"
+                android:text="Kund" />
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.25"
-            android:text="Inköpt vara" />
-
-        <EditText
-            android:id="@+id/txtKund"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.75"
-            android:ems="10" />
-    </LinearLayout>
-
+            <EditText
+                android:id="@+id/txtKund"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.75"
+                android:ems="10" />
+        </LinearLayout>
+    -->
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -80,7 +82,7 @@
             android:orientation="horizontal" >
 
             <EditText
-                android:id="@+id/txtIsbn"
+                android:id="@+id/txtSetAmount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="5" />
@@ -116,6 +118,16 @@
                 android:layout_height="wrap_content"
                 android:ems="5"
                 android:text="Avbryt nu" />
+
+            <!--
+            <Button
+                android:id="@+id/btnDateChange"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="5"
+                android:text="set  date"
+                />
+                -->
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
