--- a/MenuFragment/app/src/main/res/layout/ekonomi_fragment.xml
+++ b/MenuFragment/app/src/main/res/layout/ekonomi_fragment.xml
@@ -10,6 +10,49 @@
     android:padding="16dp"
     tools:context="com.example.magnus.menufragment.MainActivity">
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <TextView
+            android:paddingTop="10dp"
+            android:textSize="18dp"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:textStyle="bold"
+            android:fontFamily="Arial"
+            android:text="Balans"
+            android:layout_gravity="top|center"
+            android:singleLine="false"
+            />
+        <TextView
+            android:paddingTop="10dp"
+            android:textSize="18dp"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:textStyle="bold"
+            android:fontFamily="Arial"
+            android:text="Summa"
+            android:layout_gravity="top|center"
+            android:singleLine="false"
+            />
+        <TextView
+            android:paddingTop="10dp"
+            android:textSize="18dp"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:textStyle="bold"
+            android:fontFamily="Arial"
+            android:text="Datum"
+            android:layout_gravity="top|center"
+            android:singleLine="false"
+            />
+
+    </LinearLayout>
+
+
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/myListVieww"
         android:layout_width="match_parent"
