--- a/MenuFragment/app/src/main/res/layout/lager_item_row.xml
+++ b/MenuFragment/app/src/main/res/layout/lager_item_row.xml
@@ -13,7 +13,7 @@
         <ImageView
             android:id="@+id/productImage"
             android:layout_width="250dp"
-            android:layout_height="match_parent">
+            android:layout_height="250dp">
         </ImageView>
 
         <LinearLayout
