--- a/MenuFragment/app/src/main/res/layout/annons_formular_fragment.xml
+++ b/MenuFragment/app/src/main/res/layout/annons_formular_fragment.xml
@@ -18,7 +18,7 @@
         android:textSize="20sp"
         android:text="Ny annons"
 
-        android:id="@+id/textView5"
+        android:id="@+id/formularTitle"
 
         android:layout_alignParentTop="true"
         android:textColor="#000000"
@@ -29,8 +29,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/editTextTitel"
         android:layout_marginTop="28dp"
-        android:layout_below="@+id/textView5"
-        android:layout_alignStart="@+id/textView5"
+        android:layout_below="@+id/formularTitle"
+        android:layout_alignStart="@+id/formularTitle"
         android:hint="@string/Titel"
         android:textIsSelectable="false"
         android:textColorHint="#A9A9A9"
