--- a/MenuFragment/app/src/main/res/layout/schema_update_time_fragment.xml
+++ b/MenuFragment/app/src/main/res/layout/schema_update_time_fragment.xml
@@ -21,7 +21,7 @@
             android:layout_gravity="center"
             android:textSize="20sp"
             android:text="Ändra bokning"
-            android:id="@+id/textView5"
+            android:id="@+id/formularTitle"
             android:layout_alignParentTop="true" />
 
         <TextView
