--- a/MenuFragment/app/src/main/res/layout/lager_formular_fragment.xml
+++ b/MenuFragment/app/src/main/res/layout/lager_formular_fragment.xml
@@ -77,7 +77,7 @@
         android:backgroundTint="#000000" />
 
     <ImageView
-        android:id="@+id/image_camera"
+        android:id="@+id/productImageView"
         android:layout_width="match_parent"
         android:layout_weight="1"
         android:layout_height="0dp"
@@ -106,8 +106,6 @@
             android:layout_width="80dp"
             android:layout_height="match_parent"
             android:textSize="20dp"
-
-            android:src="@drawable/kamerasymbol"
             android:background="#FFFFFF"
             android:textColor="#A9A9A9" />
 
@@ -119,7 +117,6 @@
 
             android:layout_width="75dp"
             android:layout_height="match_parent"
-            android:src="@drawable/gallerisymbol"
             android:background="#FFFFFF"
             android:textColor="#A9A9A9" />
 
