--- a/MenuFragment/app/src/main/res/layout/ekonomi_fragment.xml
+++ b/MenuFragment/app/src/main/res/layout/ekonomi_fragment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,6 +9,39 @@
     android:padding="16dp"
     tools:context="com.example.magnus.menufragment.MainActivity">
 
+    <!-- <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <TextView
+            android:paddingTop="10dp"
+            android:textSize="18dp"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:textStyle="bold"
+            android:fontFamily="Arial"
+            android:text="Balans:"
+            android:layout_gravity="top|center"
+            android:singleLine="false"
+            />
+        <TextView
+            android:onClick="onClick"
+            android:clickable="true"
+            android:paddingTop="10dp"
+            android:id="@+id/total_inkomst"
+            android:textSize="13dp"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:textStyle="bold"
+            android:fontFamily="Arial"
+            android:text="Titel"
+            android:layout_gravity="top|center"
+            android:singleLine="false"
+            />
+
+    </LinearLayout>
+-->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
@@ -49,7 +81,6 @@
             android:layout_gravity="top|center"
             android:singleLine="false"
             />
-
     </LinearLayout>
 
 
