--- a/MenuFragment/app/src/main/res/layout/ekonomi_fragment.xml
+++ b/MenuFragment/app/src/main/res/layout/ekonomi_fragment.xml
@@ -9,10 +9,11 @@
     android:padding="16dp"
     tools:context="com.example.magnus.menufragment.MainActivity">
 
-    <!-- <LinearLayout
+         <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-        <TextView
+        <!--
+            <TextView
             android:paddingTop="10dp"
             android:textSize="18dp"
             android:layout_width="100dp"
@@ -28,7 +29,7 @@
             android:onClick="onClick"
             android:clickable="true"
             android:paddingTop="10dp"
-            android:id="@+id/total_inkomst"
+            android:id="@+id/balans_helvete"
             android:textSize="13dp"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
@@ -39,9 +40,9 @@
             android:layout_gravity="top|center"
             android:singleLine="false"
             />
-
-    </LinearLayout>
 -->
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
