--- a/MenuFragment/app/src/main/res/layout/ekonomi_fragment.xml
+++ b/MenuFragment/app/src/main/res/layout/ekonomi_fragment.xml
@@ -9,39 +9,7 @@
     android:padding="16dp"
     tools:context="com.example.magnus.menufragment.MainActivity">
 
-         <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <!--
-            <TextView
-            android:paddingTop="10dp"
-            android:textSize="18dp"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:gravity="left"
-            android:textStyle="bold"
-            android:fontFamily="Arial"
-            android:text="Balans:"
-            android:layout_gravity="top|center"
-            android:singleLine="false"
-            />
-        <TextView
-            android:onClick="onClick"
-            android:clickable="true"
-            android:paddingTop="10dp"
-            android:id="@+id/balans_helvete"
-            android:textSize="13dp"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:gravity="left"
-            android:textStyle="bold"
-            android:fontFamily="Arial"
-            android:text="Titel"
-            android:layout_gravity="top|center"
-            android:singleLine="false"
-            />
--->
-    </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -91,7 +59,40 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:layout_gravity="top" />
+<!--
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
+        <TextView
+            android:paddingTop="10dp"
+            android:textSize="18dp"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:textStyle="bold"
+            android:fontFamily="Arial"
+            android:text="Balans:"
+            android:layout_gravity="top|center"
+            android:singleLine="false"
+            />
+        <TextView
+            android:onClick="onClick"
+            android:clickable="true"
+            android:paddingTop="10dp"
+            android:id="@+id/balans_helvete"
+            android:textSize="13dp"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:textStyle="bold"
+            android:fontFamily="Arial"
+            android:text="Titel"
+            android:layout_gravity="top|center"
+            android:singleLine="false"
+            />
+
+    </LinearLayout>-->
     <LinearLayout
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
