--- a/MenuFragment/app/src/main/res/layout/ekonomi_fragment.xml
+++ b/MenuFragment/app/src/main/res/layout/ekonomi_fragment.xml
@@ -52,7 +52,7 @@
 
 
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/myListVieww"
+        android:id="@+id/ekonomiListView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
